# weston-wall

./: .gitignore  Makefile.am  README.md  configure.ac
src/: background.c  dock-manager.c  launcher-menu.c  notification-area.c  window-switcher.c
